feat(header): implement responsive header with mobile menu and blur effect

--- a/clients/tsconfig.json
+++ b/clients/tsconfig.json
@@ -5,9 +5,9 @@
     { "path": "./tsconfig.node.json" }
   ],
   "compilerOptions": {
-    "baseUrl": "./src",
+    "baseUrl": "./",
     "paths": {
-      "@components/*": ["components/*"],
+      "@components/*": ["src/components/*"],
       "@types/*": ["types/*"],
       "@assets/*": ["assets/*"],
       "@utils/*": ["utils/*"],
